[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/buttons/interfaz ingame.png" type="Texture" id=1]
[ext_resource path="res://src/scenes/MenuScene/IngameInterface.gd" type="Script" id=2]
[ext_resource path="res://assets/lifebar/lifebar_back.png" type="Texture" id=3]
[ext_resource path="res://assets/lifebar/lifebar_front.png" type="Texture" id=4]
[ext_resource path="res://assets/character/Idle__001.png" type="Texture" id=5]
[ext_resource path="res://src/scenes/MenuScene/SettingsMenu/SettingsMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/scenes/MenuScene/Reliquias.tscn" type="PackedScene" id=8]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536.82, 40.6752, 89.0908, 96.3891 )

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/interfaz ingame.png-310679c08a53c119e7fe0bf210770b4f.stex"

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = SubResource( 2 )
region = Rect2( 1640.77, 43.4441, 132.09, 97.6075 )

[sub_resource type="StreamTexture" id=4]
flags = 4
load_path = "res://.import/interfaz ingame.png-310679c08a53c119e7fe0bf210770b4f.stex"

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = SubResource( 4 )
region = Rect2( 1796.15, 60.6015, 72.7728, 69.7065 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( -3.73901, -9.9735, 324.9, 262.628 )

[node name="Ingame" type="CanvasLayer"]
script = ExtResource( 2 )
coleccionables = ExtResource( 8 )
opciones = ExtResource( 7 )

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = 229.0
margin_top = 76.0
margin_right = 374.0
margin_bottom = 101.0
rect_scale = Vector2( 2.809, 3.044 )
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="GUI" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="Mapa" type="TextureButton" parent="."]
margin_left = 1531.0
margin_top = 39.0
margin_right = 1634.0
margin_bottom = 140.0
texture_normal = SubResource( 1 )
expand = true

[node name="Coleccionables" type="TextureButton" parent="."]
margin_left = 1641.0
margin_top = 41.0
margin_right = 1772.0
margin_bottom = 141.0
texture_normal = SubResource( 3 )
expand = true

[node name="Opciones" type="TextureButton" parent="."]
margin_left = 1796.0
margin_top = 58.0
margin_right = 1869.0
margin_bottom = 131.0
texture_normal = SubResource( 5 )
expand = true

[node name="CharacterIcon" type="TextureRect" parent="."]
margin_left = -14.0
margin_right = 310.0
margin_bottom = 262.0
rect_scale = Vector2( 0.721151, 0.682808 )
texture = SubResource( 6 )

[connection signal="pressed" from="Mapa" to="." method="_on_Mapa_pressed"]
[connection signal="pressed" from="Coleccionables" to="." method="_on_Coleccionables_pressed"]
[connection signal="pressed" from="Opciones" to="." method="_on_Opciones_pressed"]
